[package]

name = "websocket"
version = "0.12.2"
authors = ["cyderize <admin@cyderize.org>"]

description = "A WebSocket (RFC6455) library for Rust."

documentation = "http://cyderize.github.io/rust-websocket/doc/websocket/"
homepage = "http://cyderize.github.io/rust-websocket/"
repository = "https://github.com/cyderize/rust-websocket.git"

readme = "README.md"

keywords = ["websocket", "websockets", "rfc6455"]

license = "MIT"

[dependencies]
hyper = "*"
unicase = "*"

url = "*"
rustc-serialize = "*"
bitflags = "*"
rand = "*"
byteorder = "*"

[dependencies.openssl]
version = "*"
optional = true

[dependencies.hyper]
version = "*"
default-features = false

[features]
default = ["openssl"]

openssl = ["hyper/openssl", "openssl"]
nightly = ["hyper/nightly"]
